Updates for good text

--- a/_src/_data/comingattractions.yaml
+++ b/_src/_data/comingattractions.yaml
@@ -1,6 +1,8 @@
 - title: Legally Blonde
   description: |
-    In the criminal justice system, the people are represented by two separate yet equally important groups: the police who investigate crime and the district attorneys who prosecute the offenders. These are their stories.
+    A fabulously fun award-winning musical based on the adored movie, Legally Blonde The Musical, follows the transformation of Elle Woods as she tackles stereotypes and scandal in pursuit of her dreams. Action-packed and exploding with memorable songs and dynamic dances - this musical is so much fun, it should be illegal!
+    <br/>
+    <br/>Elle Woods appears to have it all. Her life is turned upside down when her boyfriend Warner dumps her so he can attend Harvard Law. Determined to get him back, Elle ingeniously charms her way into the prestigious law school. While there, she struggles with peers, professors and her ex. With the support of some new friends, though, Elle quickly realizes her potential and sets out to prove herself to the world.
 - title: Metamorphoses
   description: |
-    As Gregor Samsa awoke one morning from uneasy dreams he found himself transformed in his bed into a gigantic insect. He was lying on his hard, as it were armor-plated, back and when he lifted his head a little he could see his dome-like brown belly divided into stiff arched segments on top of which the bed quilt could hardly keep in position and was about to slide off completely. His numerous legs, which were pitifully thin compared to the rest of his bulk, waved helplessly before his eyes.
+    A collection of stories from Ovid's <em>Metamorphoses</em>, adapted for the stage by Mary Zimmerman as a series of vignettes that include Orpheus and Eurydice, King Midas, and Narcissus.
