Adding the poster

--- a/_src/_data/comingattractions.yaml
+++ b/_src/_data/comingattractions.yaml
@@ -1,5 +1,6 @@
 - title: Legally Blonde
-  dates: November XX-XX
+  dates: November 15-18 @ 7pm
+  image: /images/Legally_Blonde.png
   description: |
     A fabulously fun award-winning musical based on the adored movie, Legally Blonde The Musical, follows the transformation of Elle Woods as she tackles stereotypes and scandal in pursuit of her dreams. Action-packed and exploding with memorable songs and dynamic dances - this musical is so much fun, it should be illegal!
     <br/>
