Updating ticket link

--- a/_src/_data/links.yaml
+++ b/_src/_data/links.yaml
@@ -1,5 +1,5 @@
 - label: Tickets
-  url: https://dreherathletics.com/event-tickets
+  url: https://richlandone.hometownticketing.com/embed/all?tile_id=14&tile_item=67
   external: true
 - label: Calendar
   url: /#Calendar
