Fixing title Fixing title

--- a/_src/_data/comingattractions.yaml
+++ b/_src/_data/comingattractions.yaml
@@ -1,4 +1,4 @@
-- title: Hadestown
+- title: "Hadestown: Teen Edition"
   dates: May 15-17 @ 7pm, May 17 @ 2pm
   image: /images/Hadestown_Poster.png
   description: |
