Updating Hadestown Logo

--- a/_src/_data/comingattractions.yaml
+++ b/_src/_data/comingattractions.yaml
@@ -1,6 +1,6 @@
 - title: "Hadestown: Teen Edition"
   dates: May 15-17 @ 7pm, May 17 @ 2pm
-  image: /images/Hadestown_Poster.png
+  image: /images/hadestown.png
   description: |
     Come join the Dreher Drama Department for HADESTOWN: Teen Edition.
     <br/><br/>HADESTOWN follows two intertwining love stories — that of young dreamers Orpheus and Eurydice, and that of King Hades and his wife Persephone — as it invites audiences on a hell-raising journey to the underworld and back. Performed by a vibrant ensemble of actors, dancers and singers, HADESTOWN delivers a deeply resonant and defiantly hopeful theatrical experience.
